# tolkienbucket

./: CMakeLists.txt  README.md  bucket.hpp  validate.cpp
